--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Projects</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="/hello-world/CSS/styles.css">
     <link rel="icon" href="IMGs/favicon.ico">
   </head>
   <body>
