--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Hello World!</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="/hello-world/CSS/styles.css">
   <link rel="icon" href="IMGs/favicon.ico">
 </head>
 
